--- a/app/src/main/res/layout-v21/activity_data_entry.xml
+++ b/app/src/main/res/layout-v21/activity_data_entry.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black"
+    android:background="@color/dark_gray"
     tools:context="com.ibxcodecat.frc_scouting.Activity.DataEntryActivity">
 
     <Button
@@ -216,6 +216,7 @@
         android:layout_marginTop="16dp"
         android:background="#00000000"
         android:entries="@array/teams"
+        android:textColor="@color/light_grey"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -374,6 +375,7 @@
         android:textAlignment="textEnd"
         android:textColor="@color/light_grey"
         android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/divider2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/horizontalDivider" />
@@ -387,6 +389,7 @@
         android:text="@string/teleopGroupLabelText"
         android:textColor="@color/light_grey"
         android:textAlignment="center"
+        android:textStyle="bold"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/divider2"
@@ -481,6 +484,7 @@
         android:text="@string/high_goal"
         android:textColor="@color/light_grey"
         android:textAlignment="center"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/divider2"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
@@ -495,6 +499,7 @@
         android:text="@string/low_goal"
         android:textColor="@color/light_grey"
         android:textAlignment="center"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/divider2"
         app:layout_constraintTop_toBottomOf="@+id/highTeleopMissNumText" />
